--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.8",
     "vue": "^3.5.13",
+    "vue-i18n": "^10.0.6",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
